--- a/MusicGame/Config/DefaultInput.ini
+++ b/MusicGame/Config/DefaultInput.ini
@@ -78,7 +78,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="Shoot",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +AxisMappings=(AxisName="Forward",Scale=0.300000,Key=D)
 +AxisMappings=(AxisName="Forward",Scale=-0.300000,Key=A)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
